Final Exam Commit

--- a/app_client/about/about.view.html
+++ b/app_client/about/about.view.html
@@ -6,7 +6,8 @@
 			<div class="row">
 				<div class="col-md-12">
                     <h1>{{vm.content}}</h1>
-                    <p>About</p>
+                    <h2>Fuel Efficience is here for you!</h2>
+                    <p><b>Founded in </b> late 2016, Fuel Efficience strives to provide you with up-to-date fuel prices and locations so you can enjoy savings on fuel.
                 </div>
             </div>
             <footer></footerc>
