--- a/app_client/common/directives/carMake/carMake.template.html
+++ b/app_client/common/directives/carMake/carMake.template.html
@@ -4,7 +4,7 @@
         onmousedown="if(this.options.length>8){this.size=8;}"
         onchange='this.size=0;'
         onblur="this.size=0;">
-	<option value="AC">Acura</option>
+	<!--<option value="AC">Acura</option>
 	<option value="AR">Alfa Romeo</option>
 	<option value="AM">Aston Martin</option>
 	<option value="AD">Audi</option>
@@ -12,20 +12,20 @@
 	<option value="BM">BMW</option>
 	<option value="BG">Bugatti</option>
 	<option value="BC">Buick</option>
-	<option value="CA">Cadillac</option>
+	<option value="CA">Cadillac</option>-->
 	<option value="CH">Chevrolet</option>
 	<option value="CY">Chrysler</option>
-	<option value="CI">Citroen</option>
+	<!--<option value="CI">Citroen</option>-->
 	<option value="DG">Dodge</option>
-	<option value="FE">Ferrari</option>
-	<option value="FI">Fiat</option>
+	<!--<option value="FE">Ferrari</option>
+	<option value="FI">Fiat</option>-->
 	<option value="FO">Ford</option>
-	<option value="GE">Geely</option>
-	<option value="GM">General Motors</option>
+	<!--<option value="GE">Geely</option>
+	<option value="GM">General Motors</option>-->
 	<option value="GC">GMC</option>
 	<option value="HO">Honda</option>
 	<option value="HY">Hyundai</option>
-	<option value="IF">Infiniti</option>
+	<!--<option value="IF">Infiniti</option>
 	<option value="JG">Jaguar</option>
 	<option value="JP">Jeep</option>
 	<option value="KI">Kia</option>
@@ -50,8 +50,8 @@
 	<option value="SU">Subaru</option>
 	<option value="SZ">Suzuki</option>
 	<option value="TM">Tata Motors</option>
-	<option value="TS">Tesla</option>
+	<option value="TS">Tesla</option>-->
 	<option value="TY">Toyota</option>
-	<option value="VW">Volkswagen</option>
-	<option value="VV">Volvo</option>
+	<!--<option value="VW">Volkswagen</option>
+	<option value="VV">Volvo</option>-->
 </select>
