--- a/app_client/common/directives/header/header.template.html
+++ b/app_client/common/directives/header/header.template.html
@@ -14,7 +14,7 @@
 	    Menu <i class="icon-cross"></i>
     </a>
     <h1 class="fh5co-logo">
-        <a class="navbar-brand" href="index.html">Gas Station App</a>
+        <a class="navbar-brand" href="index.html">Fuel Efficience</a>
     </h1>
     <ul>
       <div ng-if="vm.me == 'home'">
@@ -87,7 +87,7 @@
                    ng-click="vm.toggle=!vm.toggle">
                     Menu <i class="icon-menu"></i>
                 </a>
-                <a class="navbar-brand" href="index.html">Gas Price Checker</a>
+                <a class="navbar-brand" href="index.html">Fuel Efficience</a>
             </div>
         </div>
     </div>
