--- a/app_client/prices/prices.view.html
+++ b/app_client/prices/prices.view.html
@@ -8,6 +8,7 @@
 				<div class="col-md-12">
                     <h1>{{vm.content}}</h1>
                     <p>Prices</p>
+                    <gas-price price="vm.getWeather"></gas-price>
                 </div>
             </div>
             <footer></footer>
