--- a/app_client/signup/signup.view.html
+++ b/app_client/signup/signup.view.html
@@ -2,7 +2,7 @@
     <header></header>
     <!-- Page Content -->
     <div id="fh5co-main">
-        <div class="myContainer">
+        <div class="container">
 			<div class="row">
 				<div class="col-md-12">
 				    <div class="centerize">
